--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "purescript-prelude": "^3.0.0",
     "purescript-dom": "^4.5.0",
-    "purescript-aff": "^3.1.0"
+    "purescript-aff": "^3.1.0",
+    "purescript-validation": "^3.1.0"
   }
 }
