--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "purescript-dom": "^4.5.0",
     "purescript-aff": "^3.1.0",
     "purescript-validation": "^3.1.0",
-    "purescript-folds": "^3.1.0"
+    "purescript-folds": "^3.1.0",
+    "purescript-coroutines": "^4.0.0",
+    "purescript-aff-coroutines": "^5.0.0"
   }
 }
